<resources>
    <string name="app_name">True Colors</string>
    <string name="title_home">Home</string>
    <string name="title_color_blind_test">Color Blind Test</string>
    <string name="name_color">Name Color</string>
    <string name="color_name">blue</string>
    <string name="rgb">RGB</string>
    <string name="rgb_result">(255, 0, 0)</string>
    <string name="hex">Hex</string>
    <string name="hex_result">#427D9D</string>
    <string name="welcome_text">Welcome 👋</string>
    <string name="tagline_text">See the world in true colors</string>
    <string name="analyze">Analyze</string>
    <string name="button_camera">button camera</string>
    <string name="button_upload">button upload</string>
    <string name="header">header</string>
    <string name="splash_text">Color Detection Application for Color Blind Sufferers</string>
    <string name="logo">logo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="color_blind_test_result">Color Blind Test Result</string>
    <string name="result_name">You Are Partially Color Blind</string>
    <string name="quiz_name">Hello There</string>
    <string name="here_are_your_results">Here are your results</string>
    <string name="more_detail">More Detail:</string>
    <string name="detail_result">Red-green: you have difficulty distinguishing between red and green</string>
    <string name="recommendation">Recommendation:</string>
    <string name="recommendation_result">To make sure you are truly color blind. We recommend that you check with an expert.</string>
    <string name="ishihara_test">Ishihara Test</string>
    <string name="subtitle">Are you ready to take the test?</string>
    <string name="start">Start</string>
    <string name="submit">SUBMIT</string>
    <string name="question">What do you see on the plate?</string>
    <string name="score">7/14</string>
    <string name="color_blind_test">Color Blind Test</string>
    <string name="finish">FINISH</string>
    <string name="next">NEXT</string>
    <string name="warning_option">Silakan pilih jawaban terlebih dahulu!</string>
<<<<<<< HEAD
    <string name="Accuracy">Accuracy : 90%</string>
=======
    <string name="accuracy">Accuracy</string>
    <string name="color_scan_result">Color Scan Result</string>
>>>>>>> 20cfbfb0c0d78acc86d62cb61553999d56042c68
</resources>