<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="90dp"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:srcCompat="@drawable/ic_place_holder" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Buttons Section -->


    <ImageView
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_rounded_color_secondary"
        android:clickable="true"
        android:contentDescription="@string/button_camera"
        android:focusable="true"
        android:foreground="@drawable/ripple_effect"
        android:scaleType="centerInside"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_result" />

    <ImageView
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/rectangle_rounded_color_secondary"
        android:clickable="true"
        android:contentDescription="@string/button_upload"
        android:focusable="true"
        android:foreground="@drawable/ripple_effect"
        android:scaleType="centerInside"
        android:src="@drawable/ic_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/iv_result" />


    <FrameLayout
        android:id="@+id/btn_analyze_wrapper"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_effect"
        android:background="@drawable/rectangle_rounded"
        app:layout_constraintEnd_toEndOf="@+id/btn_upload"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/btn_upload">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/text_analyze"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/analyze"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/icon_analyze"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/analyze"
                android:src="@drawable/ic_analyze"
                />
        </LinearLayout>
    </FrameLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <!-- Analyze Button -->
</androidx.constraintlayout.widget.ConstraintLayout>
